objects/ssot__RentalCarEnergyUse__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AccountId__c</fullName>
        <label>Account</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CarbonFootprintReportDate__c</fullName>
        <label>Carbon Footprint Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__CostCenter__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DistanceUnitId__c</fullName>
        <label>Distance Unit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Distance__c</fullName>
        <label>Distance</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__FuelType__c</fullName>
        <label>Fuel Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Rental Car Energy Use Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name of the record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RentalCarCompanyCode__c</fullName>
        <label>Rental Car Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RentalCarCompanyName__c</fullName>
        <label>Rental Car Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RentalCarEmssnFctrId__c</fullName>
        <label>Rental Car Emissions Factor</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3CrbnFtprntId__c</fullName>
        <label>Scope 3 Carbon Footprint</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3EmssnSrcId__c</fullName>
        <label>Scope 3 Emissions Source</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Scope3GhgCategory__c</fullName>
        <label>Scope 3 GHG Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__SuplScope3EmissionsNumber__c</fullName>
        <label>Supl Scope 3 Emissions</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__SupplierId__c</fullName>
        <label>Supplier</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__TravelerName__c</fullName>
        <label>Traveler Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VendorProvidedEmissionsInTco2eNumber__c</fullName>
        <label>Vendor-Provided Emissions (tCO2e)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383625930_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RentalCarEnergyUse_Scope3CrbnFtprntI_rel</label>
        <referenceTo>ssot__Scope3CarbonFootprint__dlm</referenceTo>
        <relationshipLabel>RentalCarEnergyUse_Scope3CrbnFtprntI_rel</relationshipLabel>
        <relationshipName>rel_1747383625930_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383626984_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RentalCarEnergyUse_RentalCarEmssnFct_rel</label>
        <referenceTo>ssot__RentalCarEmissionsFactor__dlm</referenceTo>
        <relationshipLabel>RentalCarEnergyUse_RentalCarEmssnFct_rel</relationshipLabel>
        <relationshipName>rel_1747383626984_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1747383627913_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RentalCarEnergyUse_DistanceUnitId_ma_rel</label>
        <referenceTo>ssot__UnitOfMeasure__dlm</referenceTo>
        <relationshipLabel>RentalCarEnergyUse_DistanceUnitId_ma_rel</relationshipLabel>
        <relationshipName>rel_1747383627913_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>